# msys2-tests

./: LICENSE.txt  Makefile  README.md  action.yml  group_helper.sh  meson.build
.github/workflows/: main.yml
ada/: .gitignore  gnat_exception_internal.adb  hello.adb  test.sh
autotools/: .gitignore  Makefile  Makefile.am  build.sh  example.c  test.sh
autotools/example/: configure.ac
cmake/: CMakeLists.txt  example.cxx  i686-w64-mingw32.cmake  test.sh  x86_64-w64-mingw32.cmake  x86_64-w64-mingw32ucrt.cmake
fortran/: hello.f90  test.sh
gettext/: .gitignore  test.sh
gettext/meson/: meson.build  test_snprintf_i64u.c
gettext/tools/: test.appdata.xml  test.sh
gha-matrix-gen/: action.yml
golang/: cgo.go  hello.go  test.sh
keyring/: test.sh
libtool/: .gitignore  test.sh
libtool/mylib/: Makefile  main.c  mylib.c  mylib.h
makepkg/: .gitignore  test.sh
makepkg/mingw/: PKGBUILD
makepkg/msys/: PKGBUILD
nodejs/: hello.mjs  test.sh
perl/: hello.pl  test.sh
python/: test.sh
python/setuptools-cext/: .gitignore  cwrapper.c  setup.py  test.py  test.sh
python/setuptools-cython/: .gitignore  setup.py  test.py  test.sh
python/setuptools-rust/: .gitignore  Cargo.toml  setup.py  test.sh
python/setuptools-rust/setuptools_rust_test/: __main__.py
python/setuptools-rust/src/: lib.rs
ruby/: test.sh
runtime/: custom.sh  test.sh
runtime/path_convert/: README.md  test.sh
runtime/path_convert/src/: main.cpp  path_conv.cpp  path_conv.h
runtime/path_convert_integration/: echo.c  test.py
runtime/symlinks/: .gitignore  make-menagerie.sh  test.sh
rust/: test.sh
tests/: exception_handling.cpp  meson.build
tests/pch/: pch.hpp
toolchain/: README.md  test.sh
toolchain/custom/: test-libc++-static.cc  test-reproducible.sh  test.sh
toolchain/custom/test-cc-stack-size/: test.sh
toolchain/custom/test-delayload/: lib.c  main.c  main.def  test.sh  ws2_32.def.in
toolchain/custom/test-delayload-failhook/: lib.c  main.c  test.sh
toolchain/custom/test-libc++-static/: test-libc++-static.cc  test.sh
toolchain/meson/: aarch64-w64-mingw32.txt  i686-w64-mingw32.txt  meson_options.txt  x86_64-w64-mingw32.txt  x86_64-w64-mingw32ucrt.txt
toolchain/meson/tests/: call_once.cpp  cfguard-test.c  cygwin_wmemset.c  fstat64.c  libcpp_long_double.cpp  meson.build  openmp_for_if.c  pch.cpp  pformat_wputchars.c  posix_sem.c  posix_sem_named.c  posix_shm.c  printf_format.c  quick_exit.cpp  stackprotector_custom.c  stpcpy_fortify.c  undef_memrchr.c  wcstok_nonconform.c  wildcard.c  windres.c  windres.rc
toolchain/meson/tests/def-undec-stdcall/: meson.build  my-executable.c  my-shared-lib.c  my-shared-lib.def
toolchain/meson/tests/ices/: gcc-115038-1.cpp  gcc-115038-2.cpp  gcc-115038-3.c  meson.build
toolchain/meson/tests/pch/: pch.hpp
toolchain/tests/: huge_val.c  meson.build  openmp_for_if.c  pch.cpp  pow.c  printf_format.c  snprintf_redef.c  windres.rc
tools/: .gitignore  git.sh  gnupg.sh  openssh.sh  shells.sh  test.sh
